# cto-test

./: .editorconfig  .gitignore  CMakeLists.txt  FRONTEND_SETUP.md  README.md  docker-compose.yml  run.sh  start-backend.sh
backend/: .gitignore  Dockerfile  README.md  pom.xml  run.sh
backend/src/main/resources/: application-dev.properties  application-prod.properties  application.properties  application.yml
backend/src/test/resources/: application-test.properties
docs/: architecture.md
frontend/: .eslintrc.cjs  IMPLEMENTATION_SUMMARY.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppBar.tsx  DataTable.tsx  KPICard.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/components/admin/: ClassesManager.tsx  EquipmentInventory.tsx  MembersTable.tsx  PricingPlans.tsx  RevenueAnalytics.tsx  StaffTable.tsx
frontend/src/components/member/: AttendanceLog.tsx  (+5 more)
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: AdminDashboard.tsx  Dashboard.tsx  ForgotPassword.tsx  LandingPage.tsx  Login.tsx  MemberDashboard.tsx  Signup.tsx  TrainerDashboard.tsx  Unauthorized.tsx  VerifyEmail.tsx
frontend/src/services/: adminApi.ts  api.ts  auth.ts
frontend/src/stores/: authStore.ts
frontend/src/theme/: theme.ts
frontend/src/types/: index.ts
include/pylite/: ast.hpp  interpreter.hpp  lexer.hpp  parser.hpp  runtime.hpp
pylex/: __init__.py  lexer.py
src/: interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  runtime.cpp
tests/: test_lexer.py  test_smoke.cpp
(+131 files in other folders)
